--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script
       type="module"
-      src="https://assets-decodeurs.lemonde.fr/design-edito/v1.pre-beta/shared/index.js"></script>
+      src="https://assets-decodeurs.lemonde.fr/design-edito/_FOR_TESTS_ONLY/shared/index.js"></script>
   </head>
   <body style="margin: 0;">
     <data class="dkdll" style="display: none">
